updated docs - changes in db to be done